main.css
@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,800|Lora:400italic|Playfair+Display:700);
*{
    padding: 0;
    margin:0;
    box-sizing: border-box;
}
body{
    background-color: #ececec;
}

.fake-header a{
    text-decoration: none;
    color: black;
    font-family: "Syncopate";
}
.fake-header{
    background: #ffffff;
    width: 100%;
    height: 100px;
    position: fixed;
    top: 0;
    z-index: 1;
    padding: 25px;
}
.fake-header h1{
    line-height: 45px;

}


#header-content{
    background-color: #ffffff;
    width: 100%;
    height: 100%;
    padding: 25px;
    box-shadow: inset 7px 2px 14px 1px #a5a0a0;
}

#header-content h1{
    font-family: "Syncopate";
}
#header-content h4{
    font-family: Segoe UI;
    font-size: 25px;
    font-weight: 100;
}

#main-header .parallax-1{
    opacity: 0.9;
    height: 585px;
    background-attachment: fixed;
    background-image: url("https://media1.giphy.com/media/peFJZc82UZ4iY/giphy.gif");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;

}
.parallax-1 .caption-wrapper{
    width: 100%;
    height: 200px;
    position: absolute;
    text-align: center;
    top: 250px;

}

.parallax-1 .caption{
    max-width: 550px;
    position: relative;
    top: 10px;
    margin: 0 auto;
    margin-top: -380px;
}
.caption-wrapper #caption-bg{
    background: black;
    max-width: 350px;
    height: 370px;
    z-index: 1;
    left: 350px;
    opacity: 0.8;
    margin: 0 auto;
}
.caption h1{
    font-family: 'Segoe UI';
    color: #ffffff;
}
.caption > h1{
    font-size: 95px;
}
.caption h1:nth-child(3){
    font-size: 75px;
}
.highlight{
    width: 100%;
}
.highlight h1{
    background: #FFD800;
    color: #ffffff;
    font-family: Segoe UI;
    max-width: 450px;
    margin: 0 auto;
    font-size: 100px;
}

#main-section{
    padding: 35px;
    background-color: #ffffff;
}

#main-section .about-me-wrapper, #main-section .portfolio-wrapper{
    padding: 10px;
    background: #ffffff;
    height: 100%;
    margin-bottom: 25px;
    color: silver;


}

#main-section .portfolio-wrapper{
    padding: 0px;
}

.about-me-wrapper h1, .portfolio-wrapper > h1{
    text-align: center;
    font-size: 60px;
    font-family: 'Raleway';
    letter-spacing: 10px;
    font-weight: 100;
    font-variant: all-petite-caps;
    background: #000000;
}

.about-me-p, .portfolio-content{
    width: 100%;
    margin-top: 60px;
    margin-bottom: 360px;
    text-align: center;
    overflow: hidden;
    position: relative;
}
.about-me-p p{
    width: 100%;
    max-width: 900px;
    font-size: 17px;
    text-align: center;
    font-family: 'Segoe UI';
    margin: 0 auto;
    color: #636363;
    letter-spacing: 1px;
}

.project{
    width: 100%;
    max-height: 450px;
    height: 450px;
}.project-info-box{
    max-width: 590px;
    text-align: center;
    float: right;
    padding: 10px;
    color: #4c4c4c;
    font-family: 'Segoe UI';
    font-size: 17px;
}
#project-bg-1{
    transition: all 0.2s linear;
    background-image: url(./pomodoroWeb.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
    width: 100%;
    height: 75%;
    position: relative;
    float: left;
    max-width: 608px;
}
#project-bg-2{
    transition: all 0.2s linear;
    background-image: url(./localized-image-storage-app.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
    width: 100%;
    height: 75%;
    position: relative;
    float: left;
    max-width: 608px;
}
#project-bg-3{
    transition: all 0.2s linear;
    background-image: url(./quote-generator.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
    width: 100%;
    height: 75%;
    position: relative;
    float: left;
    max-width: 608px;

}
#project-bg-4{
    transition: all 0.2s linear;
    background-image: url(./weather-widget.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
    width: 100%;
    height: 75%;
    position: relative;
    float: left;
    max-width: 608px;

}

#project-bg-1:hover,#project-bg-2:hover,#project-bg-3:hover{
    height: 80%;
}




.blur{
     -webkit-filter: blur(3px);
    filter: blur(3px);
}

#left-navigation{
    background: #404040;
    height: 280px;
    width: 50px;
    position: fixed;
    top: 195px;
}
.btn-nav{
    transition: background 1s linear, border-bottom 1s linear;
    height: 70px;
}
.btn-nav:hover{
    background-color: #646464;
    border-bottom: 1px solid #fdda17;
}


.fa-twitter,.fa-github,.fa-linkedin,.fa-wakatime{
    color: #ffffff;
    padding: 9px;
    font-size: 35px !important;
}
.fa-wakatime{
    font-weight: 900;
    font-family: cursive;
    padding: 5px;
}


.go-top{
    width: 50px;
    height: 50px;
    background: #fdda17;
    bottom: 120px;
    right: 30px;
    position: fixed;
    display: none;
}.go-top a{
    text-decoration: none;
}
#clickable-wrap{
    width: 100%;
    height: 100%;
}
#arrow{
    text-align: center;
    line-height: 69px;
    font-size: 50px;
}

.github-widget{
    margin: 0 auto;
}

figure{
    max-width: 700px;
    margin: 0 auto;
}

